@@ -1,3 +1,6 @@
+X   X
+    * Add Elemental Creepers 1.2.5 mod mob aliases
+
 2012-06-07  2.0
     * Add auto-detecting entity IDs
     * Add option to block spawn eggs per-creature (enableSpawnEggOverrideAllowSpawn)
